k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: lemuel
  labels:
    name: lemuel
    environment: production
